--- a/SYEV3/SYEV3.csproj
+++ b/SYEV3/SYEV3.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Classes\Casilla.cs" />
     <Compile Include="Classes\Dice.cs" />
+    <Compile Include="Classes\Rules.cs" />
     <Compile Include="Classes\Tablero.cs" />
     <Compile Include="Classes\Token.cs" />
     <Compile Include="Form1.cs">
